[package]
name = "ripress-wynd-lume-react-minimal-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
ripress = { version = "*", features = ["with-wynd"] }
wynd = { version ="*", features = ["with-ripress"] }
lume = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
paste = "1.0.15"